# MLIR-RL-artifact

./: .gitignore  404.html  Dockerfile  README.md  evaluate.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  train.py
.github/workflows/: docs.yml
api_reference/actions/: index.html
api_reference/benchmarks/: index.html
api_reference/env/: index.html
api_reference/execution/: index.html
api_reference/model/: index.html
api_reference/observation/: index.html
api_reference/ppo/: index.html
api_reference/state/: index.html
api_reference/trajectory/: index.html
api_reference/transforms/: index.html
config/: example.json
data/: .gitignore  execution_times_eval.json  execution_times_eval_full.json  execution_times_eval_lqcd.json  execution_times_eval_nn.json  execution_times_train.json
docs/: index.md
docs/api_reference/: benchmarks.md  env.md  execution.md  model.md  observation.md  ppo.md  state.md  trajectory.md  transforms.md
docs/entry_points/: evaluate.md  train.md
docs/scripts/: evaluate.md  train.md
entry_points/evaluate/: index.html
entry_points/train/: index.html
mlir_rl_artifact/: __init__.py  benchmarks.py  env.py  execution.py  model.py  observation.py  ppo.py  state.py  trajectory.py  transforms.py
mlir_rl_artifact/actions/: __init__.py  base.py  interchange.py  no_transformation.py  tiled_fusion.py  tiled_parallelization.py  tiling.py  vectorization.py
mlir_rl_artifact/utils/: bindings_process.py  config.py  dask_manager.py  file_logger.py  gpu_occupier.py  log.py  singleton.py
paper/: mlir_rl.py
scripts/: evaluate.sh  paper.sh  train.sh
search/: search_index.json
tools/ast_dumper/: CMakeLists.txt  main.cpp
(+31 files in other folders)
